--- a/client/src/styles/myApp.scss
+++ b/client/src/styles/myApp.scss
@@ -15,81 +15,24 @@
   font-family: SFProText-Medium;
   src: url("./sfpro.ttf");
 }
-.app-wrapper{
-  width: 100vw;
-  height: 100vh;
+html {
+  overflow-x: hidden;
 }
-.wrapper {
+.navbar-wrapper {
   justify-content: center;
   align-items: center;
   display: flex;
   top: 0;
-  max-width: 100vw;
-  width: 100%;
+  width: 100vw;
+  z-index: 6;
   position: sticky;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
 }
-
-.navbar-container {
-  display: flex;
-  width: 100%;
-  padding: 12px;
-  background-color: white;
-  align-items: center;
-  justify-content: center;
-  top: 0;
-  z-index: 200;
-
-  .navbar-content {
-    position: relative;
-    width: 100%;
-    display: grid;
-    max-width: 1000px;
-    
-    align-items: center;
-    grid-template-columns: 0.5fr 2fr 0.5fr;
-  
-    .logo {
-      left: 0;
-      top: 25%;
-
-      font-family: SFProText-Medium;
-      font-size: 24px;
-      letter-spacing: 0;
-      color: #f06c00;
-      text-decoration: none;
-    }
-
-    .search-bar-container {
-      margin: 0 auto;
-      position: relative;
-
-      height: 40px;
-      max-width: 500px;
-      width: 100%;
-
-      .search-bar {
-        overflow: hidden;
-        background: #f9f9f9;
-        border: none;
-        box-shadow: inset 1px 1px 3px 0 rgba(0, 0, 0, 0.15);
-        border-radius: 6px;
-        padding-left: 2.5rem;
-
-        width: 100%;
-        height: 100%;
-
-        font-size: 16px;
-      }
-      .search-icon {
-        position: absolute;
-        left: 15px;
-        max-width: 18px;
-        max-height: 18px;
-        transform: translateY(55%);
-      }
-    }
-  }
+.app-wrapper {
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  background-color: rgb(244, 244, 244);
 }
 .search-dropdown-container {
   left: 0;
@@ -102,15 +45,64 @@
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
 }
 .home-wrapper {
-  max-width: 100%;
   width: 100vw;
   padding: 15px;
-  min-height: 100vh;
-  
-  background-color: rgb(244, 244, 244);
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.navbar-container {
+  display: flex;
+  width: 100%;
+  padding: 12px;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  .navbar-content {
+    position: relative;
+    width: 100%;
+    display: grid;
+    gap: 12px;
+    max-width: 1000px;
+    align-items: center;
+    padding: 4px 12px;
+    grid-template-columns: 0.5fr 2fr 0.5fr;
+    .logo {
+      left: 0;
+      top: 25%;
+      font-family: SFProText-Medium;
+      font-size: 24px;
+      letter-spacing: 0;
+      color: #f06c00;
+      text-decoration: none;
+    }
+    .search-bar-container {
+      margin: 0 auto;
+      position: relative;
+      height: 40px;
+      max-width: 500px;
+      width: 100%;
+      .search-bar {
+        overflow: hidden;
+        background: #f9f9f9;
+        border: none;
+        box-shadow: inset 1px 1px 3px 0 rgba(0, 0, 0, 0.15);
+        border-radius: 6px;
+        padding-left: 2.5rem;
+        width: 100%;
+        height: 100%;
+        font-size: 16px;
+      }
+      .search-icon {
+        position: absolute;
+        left: 15px;
+        max-width: 18px;
+        max-height: 18px;
+        transform: translateY(55%);
+      }
+    }
+  }
 }
 .card-container {
   width: 100%;
@@ -126,11 +118,11 @@
   border: 0 solid #dcdcdc;
   display: flex;
   justify-content: space-between;
-
   .card-title {
     font-size: 0.8em;
     line-height: 20px;
-    margin-bottom: 6px;text-decoration: none;
+    margin-bottom: 6px;
+    text-decoration: none;
     a {
       color: inherit;
       text-decoration: none;
@@ -139,6 +131,13 @@
       color: #bcbcbc;
     }
   }
+}
+.posts-container {
+  width: 100%;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .new-post-container {
   max-width: 584px;
@@ -152,7 +151,6 @@
   display: flex;
   padding: 8px 8px;
   align-items: center;
-
   .new-post-profile-image {
     display: block;
     background-color: rgba(0, 0, 0, 0.1);
@@ -215,7 +213,6 @@
   background: none;
   border: none;
 }
-
 .edit-button {
   float: right;
   display: block;
@@ -225,7 +222,6 @@
   position: relative;
   background: none;
   border: none;
-
   .edit-svg {
     position: absolute;
     width: 100%;
@@ -246,14 +242,12 @@
   cursor: pointer;
   .del-svg {
     position: absolute;
-    z-index: 0;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
   }
 }
-
 .categories-container {
   max-width: 584px;
   width: 100%;
@@ -261,7 +255,6 @@
   box-shadow: 1px 2px 6px 0 rgba(0, 0, 0, 0.12);
   border-radius: 6px;
   margin-bottom: 1rem;
-
   gap: 1rem;
   display: flex;
   padding: 0.5rem;
@@ -284,6 +277,11 @@
     color: #bcbcbc;
   }
 }
+.content-loading-mask {
+  * {
+    display: none;
+  }
+}
 .card-author {
   color: #bcbcbc;
   font-size: 12px;
@@ -299,10 +297,9 @@
   backdrop-filter: blur(5px);
   background: rgba(0, 0, 0, 0.15);
   overflow-y: auto;
-  z-index: 250;
+  z-index: 8;
   .login-card-modal {
     position: fixed;
-
     background: #ffffff;
     display: flex;
     flex-direction: column;
@@ -327,12 +324,47 @@
     }
   }
 }
-.post-image {
-  object-fit: cover;
-  max-width: 500px;
-  width: 100%;
+.loading-container {
+  display: flex;
+  justify-content: center;
+  .lds-dual-ring {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+  }
+  .lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 10px;
+    height: 10px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 2px solid #007580;
+    border-color: #007580 transparent #007580 transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+  }
+  @keyframes lds-dual-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
+.post-image-container {
+  overflow: hidden;
+  max-width: 320px;
   margin-top: 20px;
   margin-bottom: 20px;
+  border-radius: 4px;
+  .post-image {
+    object-fit: cover;
+    width: 100%;
+  }
+}
+#bottom-view {
+  width: 100%;
 }
 .modal-wrapper {
   position: fixed;
@@ -345,10 +377,9 @@
   backdrop-filter: blur(5px);
   background: rgba(0, 0, 0, 0.15);
   overflow-y: auto;
-  z-index: 200;
+  z-index: 5;
   .card-modal {
     position: fixed;
-
     background: #ffffff;
     display: flex;
     flex-direction: column;
@@ -399,14 +430,12 @@
     }
   }
 }
-
 .comment-author {
   font-size: 10px;
   color: #2b2b2b;
 }
 .parent-comment {
   opacity: 0.75;
-
   font-size: 14px;
   color: #2b2b2b;
   letter-spacing: 0;
@@ -427,12 +456,14 @@
     line-height: 24px;
   }
   :first-child {
+    white-space: nowrap;
     margin-right: 5px;
     background-color: white;
     border: 1px solid #f06c00;
     color: #f06c00;
   }
   :nth-child(2) {
+    white-space: nowrap;
     background-color: #f06c00;
     border: 1px solid #f06c00;
     color: white;
@@ -451,12 +482,14 @@
     width: fit-content;
   }
   :first-child {
+    white-space: nowrap;
     margin-right: 5px;
     background-color: white;
     border: 1px solid #f06c00;
     color: #f06c00;
   }
   :nth-child(2) {
+    white-space: nowrap;
     background-color: #f06c00;
     border: 1px solid #f06c00;
     color: white;
@@ -504,7 +537,6 @@
   background-color: white;
   align-items: center;
   justify-content: space-between;
-
   .default-profile-image {
     width: 24px;
     height: 24px;
@@ -536,7 +568,6 @@
   width: 100%;
   position: relative;
   display: block;
-
   .navbar-dropdown {
     position: absolute;
     right: 0;
@@ -544,7 +575,6 @@
     left: 0;
   }
 }
-
 .navbar-dropdown-options {
   width: 100%;
   border: none;
@@ -559,7 +589,6 @@
 }
 .search-dropdown-content {
   width: 100%;
-
   .search-content-item {
     padding: 10px;
     width: 100%;
@@ -632,6 +661,7 @@
   display: none;
 }
 .hamburger-item {
+  white-space: nowrap;
   background: white;
   padding: 4px 20px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
@@ -652,7 +682,6 @@
 }
 .comment-section-header {
   opacity: 0.4;
-
   font-size: 14px;
   color: #2b2b2b;
   letter-spacing: 0;
@@ -661,6 +690,9 @@
 .hamburger-item-button {
   background: none;
   border: none;
+}
+.burger-input {
+  display: none;
 }
 @media only screen and (max-width: 838px) {
   .navbar-profile-username {
@@ -676,45 +708,113 @@
   }
 }
 @media only screen and (max-width: 550px) {
-  .home-wrapper {
-    padding: 4rem 1rem;
-  }
 }
 @media only screen and (max-width: 886px) {
   .hamburger-container {
-    display: flex;
-    justify-content: flex-end;
+    position: relative;
+    height: 50px;
   }
-
+  .hamburger-button-container {
+    padding-top: 40px;
+  }
+  .burger-label {
+    z-index: 16;
+    top: 0;
+    position: absolute;
+    right: 0;
+    transform: translateY(50%);
+    justify-content: center;
+    cursor: pointer;
+    inline-size: 18px;
+    font-size: 14px;
+    line-height: 21px;
+    block-size: calc(20px + 10px);
+    align-items: center;
+    .main-trigger-icon-container {
+      position: relative;
+      display: block;
+      block-size: 18px;
+      inline-size: 100%;
+      .main-trigger-icon {
+        background-color: black;
+        inline-size: 100%;
+        position: absolute;
+        display: block;
+        transition: all 300ms ease-in-out;
+        block-size: calc(20px / 10);
+        top: calc(36% + 2px);
+        &:before {
+          transition: all 300ms ease-in-out;
+          block-size: calc(20px / 10);
+          background-color: black;
+          content: "";
+          top: -5px;
+          display: block;
+          position: absolute;
+          inline-size: 100%;
+        }
+        &:after {
+          transition: all 300ms ease-in-out;
+          block-size: calc(20px / 10);
+          background-color: black;
+          content: "";
+          top: 5px;
+          display: block;
+          position: absolute;
+          inline-size: 100%;
+        }
+      }
+    }
+  }
+  .burger-input {
+    opacity: 1;
+    display: none;
+    &:checked ~ .burger-label {
+      z-index: 102;
+      .main-trigger-icon {
+        transition: all 300ms ease-in-out;
+        background-color: transparent;
+        &:before {
+          top: 0;
+          transform: rotate(45deg);
+          transition: all 300ms ease-in-out;
+        }
+        &:after {
+          top: 0;
+          transform: rotate(-45deg);
+          transition: all 300ms ease-in-out;
+        }
+      }
+    }
+    &:checked ~ .hamburger-item-container {
+      display: flex;
+      flex-direction: column;
+      right: 0;
+      * {
+        text-transform: uppercase;
+      }
+    }
+    &:checked ~ .container {
+      left: 0px;
+      transition: all 150ms ease-in-out;
+      z-index: 17;
+    }
+  }
   .auth-button-container-navbar {
     display: none;
-  }
-  .hamburger-icon-button {
-    border: none;
-    display: block;
-    background: none;
-    cursor: pointer;
-  }
-  .hamburger-icon {
-    display: block;
-    max-width: 30px;
-  }
-  .hamburger-item-container {
-    display: block;
   }
 }
 @media only screen and (max-width: 629px) {
   .modal-wrapper {
     background-color: white;
+    z-index: 6;
     .card-modal {
-      max-width: 100vw;
+      width: 100vw;
       border-radius: 0px;
       height: 100vh;
       top: 0;
-      padding: 20px;
     }
   }
 }
-
 @import "/newPost";
 @import "/post";
