--- a/client/src/styles/post.scss
+++ b/client/src/styles/post.scss
@@ -57,7 +57,7 @@ textarea:focus {
   border: none;
 }
 .comment-container {
-  width: 100%;
+  height: auto;
 }
 .signup-error {
   font-size: 0.8em;
@@ -66,7 +66,6 @@ textarea:focus {
 }
 .comment-vote-title-container {
   display: flex;
-  height: 100%;
   gap: 10px;
 }
 .comment-vote-container {
@@ -99,4 +98,64 @@ textarea:focus {
   cursor: pointer;
   filter: invert(53%) sepia(85%) saturate(3616%) hue-rotate(4deg)
     brightness(97%) contrast(102%);
+}
+@media only screen and (max-width: 629px) {
+  .close-label {
+    top: 0;
+    position: absolute;
+    right: 14px;
+    transform: translateY(50%);
+    justify-content: center;
+    cursor: pointer;
+    inline-size: 18px;
+    font-size: 14px;
+    z-index: 7;
+    line-height: 21px;
+    block-size: calc(20px + 10px);
+    align-items: center;
+    .main-close-icon-container {
+      position: relative;
+      display: block;
+      block-size: 18px;
+      inline-size: 100%;
+      .main-close-icon {
+        background-color: transparent;
+        inline-size: 100%;
+        position: absolute;
+        display: block;
+        transition: all 300ms ease-in-out;
+        block-size: calc(20px / 10);
+        top: calc(36% + 2px);
+        &:before {
+          transform: rotate(45deg);
+          transition: all 300ms ease-in-out;
+          block-size: calc(20px / 10);
+          background-color: black;
+          content: "";
+          top: 0;
+          display: block;
+          position: absolute;
+          inline-size: 100%;
+        }
+        &:after {
+          transform: rotate(-45deg);
+          transition: all 300ms ease-in-out;
+          block-size: calc(20px / 10);
+          background-color: black;
+          content: "";
+          top: 0;
+          display: block;
+          position: absolute;
+          inline-size: 100%;
+        }
+      }
+    }
+  }
+  .burger-input {
+    opacity: 1;
+    display: none;
+  }
+  .auth-button-container-navbar {
+    display: none;
+  }
 }
