fixed css errors

--- a/client/src/styles/myApp.scss
+++ b/client/src/styles/myApp.scss
@@ -309,7 +309,7 @@ html {
     max-width: 584px;
     width: 100%;
     border-radius: 6px 6px 6px 6px;
-    padding: 15;
+    padding: 15px;
     .login-modal-title-exit-container {
       display: flex;
       justify-content: space-between;
@@ -389,7 +389,7 @@ html {
     max-width: 584px;
     width: 100%;
     border-radius: 6px 6px 6px 6px;
-    padding: 15;
+    padding: 15px;
     .login-modal-title-exit-container {
       display: flex;
       justify-content: space-between;
