--- a/client/src/styles/myApp.scss
+++ b/client/src/styles/myApp.scss
@@ -581,8 +581,9 @@ html {
   padding: 6px 10px;
   background-color: white;
   text-align: left;
-  font-size: 14px;
+  font-size: 12px;
   cursor: pointer;
+  text-transform: uppercase;
 }
 .navbar-dropdown-options:hover {
   background-color: #f06c00;
