--- a/client/src/styles/newPost.scss
+++ b/client/src/styles/newPost.scss
@@ -20,7 +20,6 @@
       border-radius: 5px;
       .newpost-options {
         display: flex;
-
         & > .submit-type-button {
           flex: 1;
           justify-content: center;
@@ -32,7 +31,6 @@
           font-size: 1em;
           border-style: solid;
           position: relative;
-          
           cursor: pointer;
         }
         .selectedType {
@@ -77,6 +75,7 @@
           text-transform: uppercase;
           font-size: 12px;
           letter-spacing: 0.5px;
+          cursor: pointer;
           font-weight: 500;
           padding: 3px 16px;
           text-align: center;
@@ -92,6 +91,7 @@
           letter-spacing: 0.5px;
           font-weight: 500;
           padding: 3px 16px;
+          cursor: pointer;
           text-align: center;
           border-radius: 3px;
           background-color: #f06c00;
