--- a/client/src/styles/post.scss
+++ b/client/src/styles/post.scss
@@ -159,3 +159,10 @@ textarea:focus {
     display: none;
   }
 }
+@media only screen and (max-width: 540px) {
+  .auth-button-container {
+    button {
+      width: 100% !important;
+    }
+  }
+}
