--- a/client/src/styles/myApp.scss
+++ b/client/src/styles/myApp.scss
@@ -45,7 +45,7 @@ html {
 }
 .dark-mode-input {
   color: white !important;
-  opacity: 100% !important;
+  opacity: 1 !important;
   @include dark-mode-border;
 }
 .dark-mode-font {
@@ -857,7 +857,7 @@ html {
     }
   }
   .burger-input {
-    opacity: 100%;
+    opacity: 1 !important;
     display: none;
     &:checked ~ .burger-label {
       z-index: 102;
@@ -906,5 +906,5 @@ html {
     }
   }
 }
-@import "/newPost";
-@import "/post";
+@import "newPost";
+@import "post";
