--- a/client/src/styles/newPost.css
+++ b/client/src/styles/newPost.css
@@ -103,6 +103,7 @@
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 0.5px;
+  cursor: pointer;
   font-weight: 500;
   padding: 3px 16px;
   text-align: center;
@@ -119,6 +120,7 @@
   letter-spacing: 0.5px;
   font-weight: 500;
   padding: 3px 16px;
+  cursor: pointer;
   text-align: center;
   border-radius: 3px;
   background-color: #f06c00;
