--- a/client/src/styles/post.css
+++ b/client/src/styles/post.css
@@ -215,4 +215,10 @@ textarea:focus {
     display: none;
   }
 }
+
+@media only screen and (max-width: 540px) {
+  .auth-button-container button {
+    width: 100% !important;
+  }
+}
 /*# sourceMappingURL=post.css.map */
